--- a/Server/WebSocket/WebContent/NewFile.html
+++ b/Server/WebSocket/WebContent/NewFile.html
@@ -126,6 +126,7 @@ function calculateAndDisplayRoute(directionsDisplay, directionsService,
     markerArray, stepDisplay, map) {
   // First, remove any existing markers from the map.
   for (var i = 0; i < markerArray.length; i++) {
+	if(i % 2 == 0)continue;//更改同時也要改showSteps裡的marker設定
     markerArray[i].setMap(null);
   }
 
@@ -185,20 +186,22 @@ function showSteps(directionResult, markerArray, stepDisplay, map) {
   
   //很多點
   //取得單一經緯度.lat() .lng()
-
+	var flag = false;//第一筆不要空格
     for (i = 0; i < directionResult.routes[0].overview_path.length  ; i++) {
-    	if(i % 2 == 0)continue;
+    	if(i % 2 == 0)continue;//更改同時也要改calculateAndDisplayRoute裡面的初始化
 		var marker = markerArray[i] = markerArray[i] || new google.maps.Marker;
 		marker.setMap(map);
 		marker.setPosition(directionResult.routes[0].overview_path[i]);
 		
 		//取得資訊
 		document.getElementById('warnings-panel').innerHTML +=directionResult.routes[0].overview_path[i] +"0."+i + " " +"1."+directionResult.routes[0].overview_path.length+"</br>";
-		if(i != 0){
+		if(flag){
 			tempPostString += ' ';
+			
 		}
 		tempPostString +=directionResult.routes[0].overview_path[i].lng()+','+directionResult.routes[0].overview_path[i].lat();
-	} 
+		flag = true;
+    } 
     
 	//post_to_url('test.php', {"0":tempPostString});
 	//post_to_url("http://localhost:5580", {"0":tempPostString});
