--- a/Server/WebSocket/WebContent/NewFile.html
+++ b/Server/WebSocket/WebContent/NewFile.html
@@ -96,7 +96,7 @@
 		</div>
 		<div id="map"></div>
 		<div id="right-panel"><p>連線狀態：<span id = 'stat'></span></p></div>
-		<div id="right-panel_1"><p>目前共有：<span id = 'ambluance_num'></span> 輛 <img src="https://i.imgur.com/Qz00z53.png"  height="23" width="23"> 在值勤中   <span id = 'driver_num'>'></span> 輛 <img src="https://i.imgur.com/7NwDYJQ.png"  height="23" width="23"> 駕駛再使用本系統</p></div>
+		<div id="right-panel_1"><p>目前共有：<span id = 'ambluance_num'></span> 輛 <img src="https://i.imgur.com/CS6t8EC.png"  height="23" width="23"> 在值勤中   <span id = 'driver_num'>'></span> 輛 <img src="https://i.imgur.com/7NwDYJQ.png"  height="23" width="23"> 駕駛再使用本系統</p></div>
 		<div id="warnings-panel">Console：<br /></div>
 		<div id="console-panel"><input type = "text" id = "console_input" size = "66" /></div>
 		<script>
